--- a/Index.html
+++ b/Index.html
@@ -185,9 +185,9 @@
         </div>
         <div class="footer-cc">
           <img src="cc-logo.png" alt="Creative Commons Korea" class="cc-logo">
-          <p>2015 Creative Commons Korea. Some Rights Reserved.</p>
-          <p>본 저작물은 크리에이티브 커먼즈 저작자표시 2.0 대한민국 라이선스에 따라 이용할 수 있습니다.</p>
-          <a href="http://creativecommons.org/licenses/by/2.0/kr/">라이선스 보기</a>
+          <p>2015 Creative Photography Competition. Some Rights Reserved.</p>
+          <p> It serves as a navigational aid, providing users with additional resources, contact information, legal disclaimers, and social media links..</p>
+          <a href="http://creativecommons.org/licenses/by/2.0/kr/">Check For More</a>
         </div>
       </footer>
       
