--- a/Index.html
+++ b/Index.html
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="footer-cc">
-          <img src="cc-logo.png" alt="Creative Commons Korea" class="cc-logo">
+          <img src="cc-logo.png" alt="Creative photographers" class="cc-logo">
           <p>2015 Creative Photography Competition. Some Rights Reserved.</p>
           <p> It serves as a navigational aid, providing users with additional resources, contact information, legal disclaimers, and social media links..</p>
           <a href="http://creativecommons.org/licenses/by/2.0/kr/">Check For More</a>
